--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="container" style="padding:0 24px;">
             <div style="margin-bottom:50px;">
                 <span class="section-label reveal">What We Offer</span>
-                <h2 class="section-title reveal">Activities <em>&amp; Services</em></h2>
+                <h2 class="section-title reveal">Programs <em>&amp; Services</em></h2>
                 <div class="divider reveal"></div>
             </div>
             <div class="services-grid reveal">
@@ -275,6 +275,23 @@
     </section>
 
     <!-- NEWSLETTER -->
+    <!-- QR CODE INSCRIPTION -->
+    <section style="background:#FAF6EE;padding:70px 24px;text-align:center;background-image:url('pattern.png');background-size:400px auto;background-repeat:repeat;background-attachment:fixed;">
+        <div class="container" style="max-width:600px;margin:0 auto;">
+            <span class="section-label">Quick Registration</span>
+            <h2 class="section-title" style="color:var(--navy);margin-bottom:16px;">Scan to <em>Register</em></h2>
+            <p style="color:var(--muted);font-size:0.95rem;line-height:1.7;margin-bottom:36px;">
+                Scan this QR code with your phone to quickly register for our programs and classes.
+            </p>
+            <div style="display:inline-block;background:#fff;padding:20px;border-radius:12px;box-shadow:0 8px 40px rgba(11,31,58,0.12);border:2px solid rgba(201,168,76,0.2);">
+                <img src="qr-register.jpeg" alt="QR Code Registration" style="width:220px;height:220px;display:block;">
+            </div>
+            <p style="margin-top:20px;font-size:0.82rem;color:var(--muted);letter-spacing:0.05em;">
+                <i class="fas fa-mobile-alt" style="color:var(--gold);margin-right:8px;"></i>
+                Point your camera at the QR code to get started
+            </p>
+        </div>
+    </section>
     <section class="newsletter-section"><div class="container"><div class="newsletter-inner">
         <div class="newsletter-text"><h3>Stay Connected</h3><p>Get updates on events &amp; announcements</p></div>
         <form class="newsletter-form" onsubmit="subscribeNewsletter(event)"><input type="email" class="newsletter-input" placeholder="Your email address" required><button type="submit" class="newsletter-btn">Subscribe</button></form>
@@ -301,10 +318,20 @@
     </div></footer>
     <script src="shared.js"></script>
     <script>
-    /* ── Prayer times — DOMContentLoaded requis pour que le DOM soit prêt ── */
     window.addEventListener('DOMContentLoaded', function() {
 
-        /* ── Fetch Mawaqit → Aladhan fallback ── */
+        /* ── Horloge et date en temps réel ── */
+        function updateClock() {
+            var now = new Date();
+            var timeEl = document.getElementById('currentTime');
+            var dateEl = document.getElementById('prayerDate');
+            if (timeEl) timeEl.textContent = now.toLocaleTimeString('en-US', {hour:'2-digit', minute:'2-digit', hour12:true});
+            if (dateEl) dateEl.textContent  = now.toLocaleDateString('en-US', {weekday:'long', year:'numeric', month:'long', day:'numeric'});
+        }
+        updateClock();
+        setInterval(updateClock, 1000);
+
+        /* ── Heures de prière — Mawaqit → Aladhan fallback ── */
         (async function() {
             var T = null;
             try {
@@ -312,36 +339,36 @@
                 if (r.ok) {
                     var d = await r.json();
                     if (d.times && d.times.length >= 6)
-                        T = {fajr:d.times[0],dhuhr:d.times[2],asr:d.times[3],maghrib:d.times[4],isha:d.times[5]};
+                        T = {fajr:d.times[0], dhuhr:d.times[2], asr:d.times[3], maghrib:d.times[4], isha:d.times[5]};
                 }
             } catch(e) {}
             if (!T) { try {
                 var now = new Date();
                 var url = 'https://api.aladhan.com/v1/timings/'+now.getDate()+'-'+(now.getMonth()+1)+'-'+now.getFullYear()+'?latitude=49.8951&longitude=-97.1384&method=2';
                 var res = await fetch(url), data = await res.json();
-                if (data.code===200) { var ti=data.data.timings; T={fajr:ti.Fajr,dhuhr:ti.Dhuhr,asr:ti.Asr,maghrib:ti.Maghrib,isha:ti.Isha}; }
+                if (data.code===200) { var ti=data.data.timings; T={fajr:ti.Fajr, dhuhr:ti.Dhuhr, asr:ti.Asr, maghrib:ti.Maghrib, isha:ti.Isha}; }
             } catch(e) {} }
-            if (!T) T = {fajr:'05:30',dhuhr:'12:45',asr:'15:30',maghrib:'18:15',isha:'19:45'};
+            if (!T) T = {fajr:'05:30', dhuhr:'12:45', asr:'15:30', maghrib:'18:15', isha:'19:45'};
 
             function fmt(raw) {
                 var p=(raw||'0:00').split(' ')[0].split(':'), h=parseInt(p[0]), ap=h>=12?'PM':'AM';
                 return (h%12||12)+':'+p[1]+' '+ap;
             }
-            var ids  = {fajr:'fajr-time',dhuhr:'dhuhr-time',asr:'asr-time',maghrib:'maghrib-time',isha:'isha-time'};
-            var cards= {fajr:'card-fajr',dhuhr:'card-dhuhr',asr:'card-asr',maghrib:'card-maghrib',isha:'card-isha'};
-            var nm   = new Date().getHours()*60+new Date().getMinutes(), active='card-isha';
+            var ids   = {fajr:'fajr-time', dhuhr:'dhuhr-time', asr:'asr-time', maghrib:'maghrib-time', isha:'isha-time'};
+            var cards = {fajr:'card-fajr', dhuhr:'card-dhuhr', asr:'card-asr', maghrib:'card-maghrib', isha:'card-isha'};
+            var nm    = new Date().getHours()*60 + new Date().getMinutes(), active='card-isha';
             ['fajr','dhuhr','asr','maghrib','isha'].forEach(function(k) {
                 var el=document.getElementById(ids[k]); if(el) el.textContent=fmt(T[k]);
                 var pp=(T[k]||'0:0').split(':').map(Number);
-                if (nm>=pp[0]*60+pp[1]) active=cards[k];
+                if (nm >= pp[0]*60+pp[1]) active=cards[k];
             });
             Object.values(cards).forEach(function(id) {
-                var el=document.getElementById(id); if(el) el.classList.toggle('active-prayer',id===active);
+                var el=document.getElementById(id); if(el) el.classList.toggle('active-prayer', id===active);
             });
         })();
 
-        /* ── Animated counters ── */
-        function animateCount(el,target) {
+        /* ── Compteurs animés ── */
+        function animateCount(el, target) {
             var s=performance.now();
             (function u(n) {
                 var p=Math.min((n-s)/1500,1), e=1-Math.pow(1-p,3);
@@ -357,11 +384,11 @@
         document.querySelectorAll('[data-target]').forEach(function(el) { sObs.observe(el); });
     });
 
-    /* ── Donate widget ── */
-    var currentCurrency='CAD';
-    function setAmount(val,el){document.getElementById('donateAmt').value=val;document.querySelectorAll('.amount-pill').forEach(function(p){p.classList.remove('selected');});el.classList.add('selected');}
-    function setCurrency(cur){currentCurrency=cur;document.getElementById('currencyTag').textContent=cur;['CAD','USD'].forEach(function(c){var b=document.getElementById('btn'+c);b.style.background=c===cur?'rgba(201,168,76,0.15)':'transparent';b.style.borderColor=c===cur?'var(--gold)':'rgba(255,255,255,0.15)';b.style.color=c===cur?'var(--gold)':'rgba(255,255,255,0.5)';}); }
-    function processDonate(){var amt=parseFloat(document.getElementById('donateAmt').value);if(!amt||amt<=0){alert('Please enter a valid amount.');return;}alert('Thank you! '+currentCurrency+' $'+amt.toFixed(2)+'\nContact: rahmaislamiccentre@gmail.com');}
+    /* ── Widget Don ── */
+    var currentCurrency = 'CAD';
+    function setAmount(val,el) { document.getElementById('donateAmt').value=val; document.querySelectorAll('.amount-pill').forEach(function(p){p.classList.remove('selected');});el.classList.add('selected'); }
+    function setCurrency(cur) { currentCurrency=cur; document.getElementById('currencyTag').textContent=cur; ['CAD','USD'].forEach(function(c){ var b=document.getElementById('btn'+c); b.style.background=c===cur?'rgba(201,168,76,0.15)':'transparent'; b.style.borderColor=c===cur?'var(--gold)':'rgba(255,255,255,0.15)'; b.style.color=c===cur?'var(--gold)':'rgba(255,255,255,0.5)'; }); }
+    function processDonate() { var amt=parseFloat(document.getElementById('donateAmt').value); if(!amt||amt<=0){alert('Please enter a valid amount.');return;} alert('Thank you! '+currentCurrency+' $'+amt.toFixed(2)+'\nContact: rahmaislamiccentre@gmail.com'); }
     </script>
 </body>
 </html>
